fix overflow, stop flipping on mouse drag

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -4,13 +4,12 @@
 	justify-content: center;
 	align-items: stretch;
 	position: relative;
-	/*padding: 1rem 0;*/
+	padding: 2em 1em;
+	overflow-y: hidden;
 }
 
 .flip-card {
-	/*position: relative;*/
 	max-width: 71vh;
-	/*height: 100%;*/
 	flex: 1;
 
 	transition: transform .4s ease-out;
@@ -19,8 +18,6 @@
 }
 
 .flip-card-inner {
-	/*position: relative;*/
-	width: 100%;
 	height: 100%;
 	transition: transform 0.4s;
 	transform-style: preserve-3d;
@@ -33,14 +30,12 @@
 .card-front, .card-back {
 	position: absolute;
 
-	width: 100%;
 	height: 100%;
-	padding: 1rem;
 
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border-radius: 3.044vh;
-	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
+	box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
 	/*firefox bug with backface visibility*/
 	transform: 	rotateX(0);
 }
@@ -49,9 +44,9 @@
 	transform: rotateY(180deg);
 }
 
-.card-content {
-	width: 100%;
+.card-scroll {
 	height: 100%;
+
 	overflow-y: auto;
 	scrollbar-width: thin;
 	scrollbar-color: lightgrey transparent;
@@ -60,23 +55,27 @@
 .card-icon {
 	width: 100%;
 }
-/* width */
-.card-content::-webkit-scrollbar {
-	width: 0.5rem;
+
+.card-scroll::-webkit-scrollbar {
+	width: 0.5em;
 }
 
 /* Track */
-.card-content::-webkit-scrollbar-track {
+.card-scroll::-webkit-scrollbar-track {
 	background: #0000;
 }
 
 /* Handle */
-.card-content::-webkit-scrollbar-thumb {
+.card-scroll::-webkit-scrollbar-thumb {
 	background: #D0D0D0;
 	border-radius: 999px;
 }
 
 /* Handle on hover */
-.card-content::-webkit-scrollbar-thumb:hover {
+.card-scroll::-webkit-scrollbar-thumb:hover {
 	background: #B8B8B8;
+}
+
+.spacing1 {
+	padding: 1em;
 }
