--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,7 +7,7 @@ body {
 	color: #333;
 	background-color: #fff;
 	margin: 0;
-	padding: 0 2rem;
+	padding: 0;
 
 	min-height: 100vh;
 	display: flex;
@@ -23,7 +23,7 @@ h3 {
 }
 
 section {
-	padding: 2rem;
+	padding: 2em;
 }
 
 section:not(:last-child) {
@@ -36,11 +36,11 @@ th {
 
 p {
 	color: var(--akzentfarbe);
-	margin: 0.5rem 0;
+	margin: 0.5em 0;
 }
 
 @media (min-width: 768px) {
 	section {
-		padding: 1rem 0.75rem;
+		padding: 1em 0.75em;
 	}
 }
